[tool.poetry]
name = "pydata-untappd"
version = "0.1.0"
description = ""
authors = ["LarsHanegraaf <lars.hanegraaf@blenddata.nl>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
